--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
 *::after {
   box-sizing: border-box;
 }
+@font-face {
+  font-family: 'TT';
+  src: url('TikTokDisplay-Bold') format('truetype');
+}
 /*=========Body=============================================*/
 
 body {
@@ -45,8 +49,8 @@ li {
     
     font-size: 50px;
     font-weight: 300;
-    letter-spacing: 3px;
-    font-family: fantasy;
+    letter-spacing: 1px;
+    font-family: 'TT', sans-serif;
 }
 
 
