--- a/donate_css.css
+++ b/donate_css.css
@@ -6,12 +6,14 @@
 /*=========Body=============================================*/
 
 html, body {
-  height: 100%;
+   min-height: 100%;
+  height: auto;
   background-image: url('Minecraft_\ 1.21.4\ 17.06.2025\ 08_47_44.png');
   background-size: cover; /* или contain, если надо */
   background-repeat: no-repeat;
   background-attachment: fixed; /* чтобы фон "приклеился" */
    background-position: left center;
+   
   margin: 0;
   padding: 0;
 }
@@ -37,6 +39,7 @@ li {
   height: 100%;
   margin: 0 auto;
   padding: 0 15px;  /* боковые отступы */
+  
 }
 /*=========Header=============================================*/
 
@@ -109,12 +112,14 @@ header {
     display:flex;
     flex-wrap: wrap;
     gap: 20px;
+  
     
 }
 
 .showcase {
   display: flex; 
   flex-direction: column; 
+    padding-bottom: 120px;
  
  
 }
@@ -197,18 +202,22 @@ font-family: 'Libre Franklin', sans-serif;
 
 /*=========Footer=============================================*/
 .footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   background-color: rgba(20, 20, 20, 0.85);
   backdrop-filter: blur(8px);
   color: white;
   padding: 30px 0;
   font-family: 'Libre Franklin', sans-serif;
   font-size: 14px;
-  margin-top: 60px;
+  z-index: 1000;
 }
 
 .footer_container {
   display: flex;
-  flex-direction: column;
+  flex-direction:column;
   align-items: center;
   text-align: center;
   gap: 20px;
@@ -248,8 +257,14 @@ font-family: 'Libre Franklin', sans-serif;
 
 
 @media (max-width: 768px){
+   
      .nav-toggle{
     display: block;
+  }
+
+.showcase,
+  .row {
+    padding-bottom: 140px; /* высота футера + немного запаса */
   }
     .main-nav {
     position: absolute;
